# sdl3-game-dev-boilerplate

./: .gitignore  CMakeLists.txt  Makefile  compile_commands.json  game.cpp
include/sdl3_game/actors/: actor.hpp
include/sdl3_game/screen/: screen.hpp
include/sdl3_game/states/: screen_state.hpp
src/: game.cpp  main.cpp
src/actors/: actor.cpp
src/include/: game.hpp
src/include/sdl3_game/scene/: scene.hpp
src/include/sdl3_game/screen/: screen.hpp
src/include/sdl3_game/states/: app_state.hpp
src/include/sdl3_game/texture_management/: texture_management.hpp
src/include/sdl3_game/texture_manager/: texture_manager.hpp
src/scene/: scene.cpp
src/screen/: screen.cpp
src/states/: app_state.cpp  screen_state.cpp
src/texture_management/: texture_management.cpp
src/texture_manager/: texture_manager.cpp
